; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/dxtest/win32kdxtest/extr_dump.c_dump_CallBackFlags.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/dxtest/win32kdxtest/extr_dump.c_dump_CallBackFlags.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [35 x i8] c"dumping the CallBackFlags from %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [21 x i8] c"pCallBackFlags[0] : \00", align 1
@DDHAL_CB32_CANCREATESURFACE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [28 x i8] c"DDHAL_CB32_CANCREATESURFACE\00", align 1
@DDHAL_CB32_CREATEPALETTE = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [25 x i8] c"DDHAL_CB32_CREATEPALETTE\00", align 1
@DDHAL_CB32_CREATESURFACE = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [25 x i8] c"DDHAL_CB32_CREATESURFACE\00", align 1
@DDHAL_CB32_GETSCANLINE = common dso_local global i32 0, align 4
@.str.5 = private unnamed_addr constant [23 x i8] c"DDHAL_CB32_GETSCANLINE\00", align 1
@DDHAL_CB32_MAPMEMORY = common dso_local global i32 0, align 4
@.str.6 = private unnamed_addr constant [21 x i8] c"DDHAL_CB32_MAPMEMORY\00", align 1
@DDHAL_CB32_SETCOLORKEY = common dso_local global i32 0, align 4
@.str.7 = private unnamed_addr constant [23 x i8] c"DDHAL_CB32_SETCOLORKEY\00", align 1
@DDHAL_CB32_SETMODE = common dso_local global i32 0, align 4
@.str.8 = private unnamed_addr constant [19 x i8] c"DDHAL_CB32_SETMODE\00", align 1
@DDHAL_CB32_WAITFORVERTICALBLANK = common dso_local global i32 0, align 4
@.str.9 = private unnamed_addr constant [32 x i8] c"DDHAL_CB32_WAITFORVERTICALBLANK\00", align 1
@.str.10 = private unnamed_addr constant [18 x i8] c"pCallBackFlags[0]\00", align 1
@.str.11 = private unnamed_addr constant [21 x i8] c"pCallBackFlags[1] : \00", align 1
@DDHAL_SURFCB32_ADDATTACHEDSURFACE = common dso_local global i32 0, align 4
@.str.12 = private unnamed_addr constant [34 x i8] c"DDHAL_SURFCB32_ADDATTACHEDSURFACE\00", align 1
@DDHAL_SURFCB32_BLT = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [19 x i8] c"DDHAL_SURFCB32_BLT\00", align 1
@DDHAL_SURFCB32_DESTROYSURFACE = common dso_local global i32 0, align 4
@.str.14 = private unnamed_addr constant [30 x i8] c"DDHAL_SURFCB32_DESTROYSURFACE\00", align 1
@DDHAL_SURFCB32_FLIP = common dso_local global i32 0, align 4
@.str.15 = private unnamed_addr constant [20 x i8] c"DDHAL_SURFCB32_FLIP\00", align 1
@DDHAL_SURFCB32_GETBLTSTATUS = common dso_local global i32 0, align 4
@.str.16 = private unnamed_addr constant [28 x i8] c"DDHAL_SURFCB32_GETBLTSTATUS\00", align 1
@DDHAL_SURFCB32_GETFLIPSTATUS = common dso_local global i32 0, align 4
@.str.17 = private unnamed_addr constant [29 x i8] c"DDHAL_SURFCB32_GETFLIPSTATUS\00", align 1
@DDHAL_SURFCB32_LOCK = common dso_local global i32 0, align 4
@.str.18 = private unnamed_addr constant [20 x i8] c"DDHAL_SURFCB32_LOCK\00", align 1
@DDHAL_SURFCB32_RESERVED4 = common dso_local global i32 0, align 4
@.str.19 = private unnamed_addr constant [25 x i8] c"DDHAL_SURFCB32_RESERVED4\00", align 1
@DDHAL_SURFCB32_SETCLIPLIST = common dso_local global i32 0, align 4
@.str.20 = private unnamed_addr constant [27 x i8] c"DDHAL_SURFCB32_SETCLIPLIST\00", align 1
@DDHAL_SURFCB32_SETCOLORKEY = common dso_local global i32 0, align 4
@.str.21 = private unnamed_addr constant [27 x i8] c"DDHAL_SURFCB32_SETCOLORKEY\00", align 1
@DDHAL_SURFCB32_SETOVERLAYPOSITION = common dso_local global i32 0, align 4
@.str.22 = private unnamed_addr constant [34 x i8] c"DDHAL_SURFCB32_SETOVERLAYPOSITION\00", align 1
@DDHAL_SURFCB32_SETPALETTE = common dso_local global i32 0, align 4
@.str.23 = private unnamed_addr constant [26 x i8] c"DDHAL_SURFCB32_SETPALETTE\00", align 1
@DDHAL_SURFCB32_UNLOCK = common dso_local global i32 0, align 4
@.str.24 = private unnamed_addr constant [22 x i8] c"DDHAL_SURFCB32_UNLOCK\00", align 1
@DDHAL_SURFCB32_UPDATEOVERLAY = common dso_local global i32 0, align 4
@.str.25 = private unnamed_addr constant [29 x i8] c"DDHAL_SURFCB32_UPDATEOVERLAY\00", align 1
@.str.26 = private unnamed_addr constant [18 x i8] c"pCallBackFlags[1]\00", align 1
@.str.27 = private unnamed_addr constant [21 x i8] c"pCallBackFlags[2] : \00", align 1
@DDHAL_PALCB32_DESTROYPALETTE = common dso_local global i32 0, align 4
@.str.28 = private unnamed_addr constant [29 x i8] c"DDHAL_PALCB32_DESTROYPALETTE\00", align 1
@DDHAL_PALCB32_SETENTRIES = common dso_local global i32 0, align 4
@.str.29 = private unnamed_addr constant [25 x i8] c"DDHAL_PALCB32_SETENTRIES\00", align 1
@.str.30 = private unnamed_addr constant [18 x i8] c"pCallBackFlags[2]\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dump_CallBackFlags(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0), i8* %7)
  %9 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.1, i64 0, i64 0))
  %10 = load i32*, i32** %3, align 8
  %11 = getelementptr inbounds i32, i32* %10, i64 0
  %12 = load i32, i32* %11, align 4
  store i32 %12, i32* %5, align 4
  store i64 0, i64* %6, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* @DDHAL_CB32_CANCREATESURFACE, align 4
  %15 = call i32 @checkflag(i32 %13, i32 %14, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.2, i64 0, i64 0))
  %16 = load i32, i32* %5, align 4
  %17 = load i32, i32* @DDHAL_CB32_CREATEPALETTE, align 4
  %18 = call i32 @checkflag(i32 %16, i32 %17, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.3, i64 0, i64 0))
  %19 = load i32, i32* %5, align 4
  %20 = load i32, i32* @DDHAL_CB32_CREATESURFACE, align 4
  %21 = call i32 @checkflag(i32 %19, i32 %20, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0))
  %22 = load i32, i32* %5, align 4
  %23 = load i32, i32* @DDHAL_CB32_GETSCANLINE, align 4
  %24 = call i32 @checkflag(i32 %22, i32 %23, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.5, i64 0, i64 0))
  %25 = load i32, i32* %5, align 4
  %26 = load i32, i32* @DDHAL_CB32_MAPMEMORY, align 4
  %27 = call i32 @checkflag(i32 %25, i32 %26, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.6, i64 0, i64 0))
  %28 = load i32, i32* %5, align 4
  %29 = load i32, i32* @DDHAL_CB32_SETCOLORKEY, align 4
  %30 = call i32 @checkflag(i32 %28, i32 %29, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.7, i64 0, i64 0))
  %31 = load i32, i32* %5, align 4
  %32 = load i32, i32* @DDHAL_CB32_SETMODE, align 4
  %33 = call i32 @checkflag(i32 %31, i32 %32, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.8, i64 0, i64 0))
  %34 = load i32, i32* %5, align 4
  %35 = load i32, i32* @DDHAL_CB32_WAITFORVERTICALBLANK, align 4
  %36 = call i32 @checkflag(i32 %34, i32 %35, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.9, i64 0, i64 0))
  %37 = load i32, i32* %5, align 4
  %38 = call i32 @endcheckflag(i32 %37, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.10, i64 0, i64 0))
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.11, i64 0, i64 0))
  %40 = load i32*, i32** %3, align 8
  %41 = getelementptr inbounds i32, i32* %40, i64 1
  %42 = load i32, i32* %41, align 4
  store i32 %42, i32* %5, align 4
  store i64 0, i64* %6, align 8
  %43 = load i32, i32* %5, align 4
  %44 = load i32, i32* @DDHAL_SURFCB32_ADDATTACHEDSURFACE, align 4
  %45 = call i32 @checkflag(i32 %43, i32 %44, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.12, i64 0, i64 0))
  %46 = load i32, i32* %5, align 4
  %47 = load i32, i32* @DDHAL_SURFCB32_BLT, align 4
  %48 = call i32 @checkflag(i32 %46, i32 %47, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.13, i64 0, i64 0))
  %49 = load i32, i32* %5, align 4
  %50 = load i32, i32* @DDHAL_SURFCB32_DESTROYSURFACE, align 4
  %51 = call i32 @checkflag(i32 %49, i32 %50, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str.14, i64 0, i64 0))
  %52 = load i32, i32* %5, align 4
  %53 = load i32, i32* @DDHAL_SURFCB32_FLIP, align 4
  %54 = call i32 @checkflag(i32 %52, i32 %53, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.15, i64 0, i64 0))
  %55 = load i32, i32* %5, align 4
  %56 = load i32, i32* @DDHAL_SURFCB32_GETBLTSTATUS, align 4
  %57 = call i32 @checkflag(i32 %55, i32 %56, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.16, i64 0, i64 0))
  %58 = load i32, i32* %5, align 4
  %59 = load i32, i32* @DDHAL_SURFCB32_GETFLIPSTATUS, align 4
  %60 = call i32 @checkflag(i32 %58, i32 %59, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.17, i64 0, i64 0))
  %61 = load i32, i32* %5, align 4
  %62 = load i32, i32* @DDHAL_SURFCB32_LOCK, align 4
  %63 = call i32 @checkflag(i32 %61, i32 %62, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.18, i64 0, i64 0))
  %64 = load i32, i32* %5, align 4
  %65 = load i32, i32* @DDHAL_SURFCB32_RESERVED4, align 4
  %66 = call i32 @checkflag(i32 %64, i32 %65, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.19, i64 0, i64 0))
  %67 = load i32, i32* %5, align 4
  %68 = load i32, i32* @DDHAL_SURFCB32_SETCLIPLIST, align 4
  %69 = call i32 @checkflag(i32 %67, i32 %68, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.20, i64 0, i64 0))
  %70 = load i32, i32* %5, align 4
  %71 = load i32, i32* @DDHAL_SURFCB32_SETCOLORKEY, align 4
  %72 = call i32 @checkflag(i32 %70, i32 %71, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.21, i64 0, i64 0))
  %73 = load i32, i32* %5, align 4
  %74 = load i32, i32* @DDHAL_SURFCB32_SETOVERLAYPOSITION, align 4
  %75 = call i32 @checkflag(i32 %73, i32 %74, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str.22, i64 0, i64 0))
  %76 = load i32, i32* %5, align 4
  %77 = load i32, i32* @DDHAL_SURFCB32_SETPALETTE, align 4
  %78 = call i32 @checkflag(i32 %76, i32 %77, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.23, i64 0, i64 0))
  %79 = load i32, i32* %5, align 4
  %80 = load i32, i32* @DDHAL_SURFCB32_UNLOCK, align 4
  %81 = call i32 @checkflag(i32 %79, i32 %80, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.24, i64 0, i64 0))
  %82 = load i32, i32* %5, align 4
  %83 = load i32, i32* @DDHAL_SURFCB32_UPDATEOVERLAY, align 4
  %84 = call i32 @checkflag(i32 %82, i32 %83, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.25, i64 0, i64 0))
  %85 = load i32, i32* %5, align 4
  %86 = call i32 @endcheckflag(i32 %85, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.26, i64 0, i64 0))
  %87 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.27, i64 0, i64 0))
  %88 = load i32*, i32** %3, align 8
  %89 = getelementptr inbounds i32, i32* %88, i64 2
  %90 = load i32, i32* %89, align 4
  store i32 %90, i32* %5, align 4
  store i64 0, i64* %6, align 8
  %91 = load i32, i32* %5, align 4
  %92 = load i32, i32* @DDHAL_PALCB32_DESTROYPALETTE, align 4
  %93 = call i32 @checkflag(i32 %91, i32 %92, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.28, i64 0, i64 0))
  %94 = load i32, i32* %5, align 4
  %95 = load i32, i32* @DDHAL_PALCB32_SETENTRIES, align 4
  %96 = call i32 @checkflag(i32 %94, i32 %95, i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.29, i64 0, i64 0))
  %97 = load i32, i32* %5, align 4
  %98 = call i32 @endcheckflag(i32 %97, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.30, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @checkflag(i32, i32, i8*) #1

declare dso_local i32 @endcheckflag(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
